--- a/contacto.html
+++ b/contacto.html
@@ -3,29 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SIRIUS D INVERSIONES</title>
+    <title>buenvenido a siriusd.</title>
 </head>
 
+<!--cuerpo de la pagina-->
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-
+    <!--encabezado-->
     <header>
+            <!-- barra de navegacion general-->
+        <nav  class="barra-principal">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+
+        <section>
+            <hr>
+            <img src="./imagenes/logo-1.jpeg" alt="Encabezado" height="140">
+            <hr>
+        </section>
+        
         <hr>
-        <h1><img src=".\IMG-LOGOS\LOGO-IMAGEN.jpg" alt="Logo SIRIUS D" width="30" height=30">SIRIUS D.</h1>
-        <hr>
-        <h2>Contacto</h2>
-        <h4>Vision clara en cada detalle, el servicio que mereces.</h4>
+        <h1><img src="./imagenes/logo-4.jpeg" alt="LOGO PRINCIPAL" height="50">SiriusD</h1>
+        <h3>El futuro es ahora!</h3>
         <hr>
     </header>
 
+    <!--contenido de la pagina-->
     <main>
         <hr>
         <h2>Contáctanos</h2>
@@ -48,13 +55,12 @@
         </section>
 
     </main>
-</body>
 
     <!--pie de pagina-->
-<footer>
-    <hr>
-    <p>Desarrolalador Alvaro Duarte - 2025| <a href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
-    <p>&copy; 2023 SIRIUS D. Todos los derechos reservados.</p>
-</footer>
-
+    <footer>
+        <hr>
+        <p>Desarrolalador Alvaro Duarte - 2025| <a href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
+        <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
+    
+</body>
 </html>
