--- a/productos.html
+++ b/productos.html
@@ -3,97 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Conoce nuestros productos.</title>
 </head>
 
 <!--cuerpo de la pagina-->
 <body>
-
-    <!-- barra de navegacion general-->
-    <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-
     <!--encabezado-->
     <header>
-        <hr>
-        <h1><img src=".\IMG-LOGOS\LOGO-IMAGEN.jpg" alt="Logo SIRIUS D" width="30" height=30">SIRIUS D.</h1>
-        <h2>Productos</h2>
-        <h4>Tenemos lo que nesecitas</h4>
-        <hr>
-    </header>
-
-    <main>
-        <hr>
-        <!-- barra de navegacion de productos-->
-        <nav class="barra-roductos">
+            <!-- barra de navegacion general-->
+        <nav  class="barra-principal">
             <ul>
-                <li><a href="#materiales">Materiales Electricos</a></li>
-                <li><a href="#herramientas">Herramientas Electricas</a></li>
-                <li><a href="#seguridad">Equipos de Seguridad</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
 
-        <!-- contenido de la pagina-->
         <section>
-            <p>En SIRIUS D, ofrecemos una amplia gama de Productos:</p>
-            <ul>
-                <li><strong>Materiales Electricos:</strong> Contamos con una amplia gama de materiales electricos para tu hogar y tu empresa.</li>
-                <li><strong>Herramientas Electricas:</strong> Las mejores herramientas electricas para tus proyectos electricos.</li>
-                <li><strong>Equipos de Seguridad:</strong> Equipos de seguridad para la proteccion de tu hogar y tu empresa.</li>
-            </ul>
+            <hr>
+            <img src="./imagenes/logo-1.jpeg" alt="Encabezado" height="140">
+            <hr>
         </section>
 
-        <section id="materiales">
-            <h2>Materiales Electricos</h2>
-            <p>Contamos con una amplia gama de materiales electricos para tu hogar y tu empresa.</p>
+        <hr>
+        <h1><img src="./imagenes/logo-4.jpeg" alt="LOGO PRINCIPAL" height="50">Productos</h1>
+        <h3>El futuro es ahora!</h3>
+        <hr>
+    </header>
+
+    <!--contenido de la pagina-->
+    <main>
+        <h2>Bienvenido a SiriusD</h2>
+        <p>Explora nuestros productos y descubre lo que tenemos para ofrecerte.</p>
+
+        <!--navegador secundario-->
+        <nav class="barra-secundaria">
             <ul>
-                <li>Conductores Electricos</li>
-                <li>Interruptores</li>
-                <li>Enchufes</li>
-                <li>Tableros Electricos</li>
-                <li>Transformadores</li>
-                <li>Fusibles</li>
-                <li>Conectores</li>
+                <li><a href="./productos/herramientas.html">Herramientas</a></li>
+                <li><a href="./productos/materiales.html">Maquinaria</a></li>
+                <li><a href="./productos/seguridad.html">Seguridad</a></li>
             </ul>
+        </nav>
+        
+        <section>
+            <h3>Herramientas</h3>
+            <p>Encuentra las mejores herramientas para tus proyectos.</p>
         </section>
 
-        <section id="herramientas">
-            <h2>Herramientas Electricas</h2>
-            <p>Las mejores herramientas electricas para tus proyectos electricos.</p>
-            <ul>
-                <li>Taladros</li>
-                <li>Atornilladores</li>
-                <li>Sierras</li>   
-                <li>Multimetros</li>
-                <li>Pinzas</li>
-                <li>Cortadores</li>
-            </ul>
-
+        <section>
+            <h3>Maquinaria</h3>
+            <p>Descubre nuestra gama de maquinaria de alta calidad.</p>
         </section>
-        <section id="seguridad">
-            <h2>Equipos de Seguridad</h2>
-            <p>Equipos de seguridad para la proteccion de tu hogar y tu empresa.</p>
-            <ul>
-                <li>Guantes Aislantes</li>
-                <li>Botas de Seguridad</li>
-                <li>Casco de Seguridad</li>
-                <li>Gafas de Seguridad</li>
-                <li>Protectores Auditivos</li>
-            </ul>   
+
+        <section>
+            <h3>Seguridad</h3>
+            <p>Todo lo que necesitas para tus proyectos.</p>
+        </section>
 
     </main>
-</body>
 
-<!--pie de pagina-->
-<footer>
-    <hr>
-    <p>Desarrolalador Alvaro Duarte - 2025| <a href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
-    <p>&copy; 2023 SIRIUS D. Todos los derechos reservados.</p>
-</footer>
+    <!--pie de pagina-->
+    <footer>
+        <hr>
+        <p>Desarrolalador Alvaro Duarte - 2025| <a href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
+        <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
+    
+</body>
+</html>
