--- a/ubicacion.html
+++ b/ubicacion.html
@@ -3,33 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ubicacion...</title>
 </head>
 
+<!--cuerpo de la pagina-->
 <body>
-   
-    <!-- barra de navegacion general-->
-    <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-
     <!--encabezado-->
     <header>
+            <!-- barra de navegacion general-->
+        <nav  class="barra-principal">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+
+        <section>
+            <hr>
+            <img src="./imagenes/logo-1.jpeg" alt="Encabezado" height="140">
+            <hr>
+        </section>
+        
         <hr>
-        <h1><img src=".\IMG-LOGOS\LOGO-IMAGEN.jpg" alt="Logo SIRIUS D" width="30" height=30">SIRIUS D.</h1>
-        <h2>Ubicacion</h2>
-        <h4>El futuro es ahora</h4>
+        <h1><img src="./imagenes/logo-4.jpeg" alt="LOGO PRINCIPAL" height="50">Ubicacion</h1>
+        <h3>El futuro es ahora!</h3>
         <hr>
     </header>
 
     <!--contenido de la pagina-->
     <main>
+
+        <p>Estamos ubicados en Cua. Estado Miranda</p>
+        <p>Para llegar a nuestras instalaciones, puedes seguir las siguientes indicaciones:</p>
+        <p>No dudes en visitarnos</p>
         <section>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9339.835133468629!2d-66.90343091681329!3d10.187400527417696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1746456540361!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
@@ -40,11 +48,10 @@
     </main>
 
     <!--pie de pagina-->
-<footer>
-    <hr>
-    <p>Desarrolalador Alvaro Duarte - 2025| <a href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
-    <p>&copy; 2023 SIRIUS D. Todos los derechos reservados.</p>
-</footer>
-
+    <footer>
+        <hr>
+        <p>Desarrolalador Alvaro Duarte - 2025| <a href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
+        <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
+    
 </body>
 </html>
