--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>quienes somos?.</title>
+    <link rel="stylesheet" href="./css/stilo.css">
+    <title>Quienes Somos</title>
 </head>
 
 <!--cuerpo de la pagina-->
@@ -11,7 +12,7 @@
     <!--encabezado-->
     <header>
             <!-- barra de navegacion general-->
-        <nav  class="barra-principal">
+        <nav class="barra-principal">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
@@ -21,15 +22,11 @@
         </nav>
 
         <section>
-            <hr>
-            <img src="./imagenes/logo-1.jpeg" alt="Encabezado" height="140">
-            <hr>
+            <img src="./imagenes/logo-1.png" alt="Encabezado" height="140">
         </section>
-        
-        <hr>
-        <h1><img src="./imagenes/logo-4.jpeg" alt="LOGO PRINCIPAL" height="50">Nosotros</h1>
+
+        <h1><img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="40">Nosotros.</h1>
         <h3>nuestra historia es mejorar tu historia!</h3>
-        <hr>
     </header>
 
     <!--contenido de la pagina-->
@@ -54,9 +51,12 @@
 
     <!--pie de pagina-->
     <footer>
-        <hr>
         <p>Desarrolalador Alvaro Duarte - 2025| <a href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
+        <a href="https://facebook.com/alvarod14"><img src="./imagenes/logo-facebook.PNG" alt="FACEBOOK" height="25"></a>
+        <a href="https://instagram.com/alvarod14"><img src="./imagenes/logo-instagram.PNG" alt="INSTAGRAM" height="25"></a>
+        <a href="https://wa.me/+5491124079156"><img src="./imagenes/logo-whatsapp.PNG" alt="WHATSAPP" height="25"></a>
         <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
+    </footer>
     
 </body>
 </html>
