--- a/productos.html
+++ b/productos.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conoce nuestros productos.</title>
+    <link rel="stylesheet" href="./css/stilo.css">
+    <title>Productos.</title>
 </head>
 
 <!--cuerpo de la pagina-->
@@ -11,7 +12,7 @@
     <!--encabezado-->
     <header>
             <!-- barra de navegacion general-->
-        <nav  class="barra-principal">
+        <nav class="barra-principal">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
@@ -21,15 +22,11 @@
         </nav>
 
         <section>
-            <hr>
-            <img src="./imagenes/logo-1.jpeg" alt="Encabezado" height="140">
-            <hr>
+            <img src="./imagenes/logo-1.png" alt="Encabezado" height="140">
         </section>
 
-        <hr>
-        <h1><img src="./imagenes/logo-4.jpeg" alt="LOGO PRINCIPAL" height="50">Productos</h1>
+        <h1><img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="40">Productos</h1>
         <h3>El futuro es ahora!</h3>
-        <hr>
     </header>
 
     <!--contenido de la pagina-->
@@ -46,28 +43,55 @@
             </ul>
         </nav>
         
-        <section>
-            <h3>Herramientas</h3>
-            <p>Encuentra las mejores herramientas para tus proyectos.</p>
+        <section id="materiales">
+            <h2>Materiales Electricos</h2>
+            <p>Contamos con una amplia gama de materiales electricos para tu hogar y tu empresa.</p>
+            <ul>
+                <li>Conductores Electricos</li>
+                <li>Interruptores</li>
+                <li>Enchufes</li>
+                <li>Tableros Electricos</li>
+                <li>Transformadores</li>
+                <li>Fusibles</li>
+                <li>Conectores</li>
+            </ul>
         </section>
 
-        <section>
-            <h3>Maquinaria</h3>
-            <p>Descubre nuestra gama de maquinaria de alta calidad.</p>
+        <section id="herramientas">
+            <h2>Herramientas Electricas</h2>
+            <p>Las mejores herramientas electricas para tus proyectos electricos.</p>
+            <ul>
+                <li>Taladros</li>
+                <li>Atornilladores</li>
+                <li>Sierras</li>   
+                <li>Multimetros</li>
+                <li>Pinzas</li>
+                <li>Cortadores</li>
+            </ul>
         </section>
 
-        <section>
-            <h3>Seguridad</h3>
-            <p>Todo lo que necesitas para tus proyectos.</p>
+        <section id="seguridad">
+            <h2>Equipos de Seguridad</h2>
+            <p>Equipos de seguridad para la proteccion de tu hogar y tu empresa.</p>
+            <ul>
+                <li>Guantes Aislantes</li>
+                <li>Botas de Seguridad</li>
+                <li>Casco de Seguridad</li>
+                <li>Gafas de Seguridad</li>
+                <li>Protectores Auditivos</li>
+            </ul>   
         </section>
 
     </main>
 
     <!--pie de pagina-->
     <footer>
-        <hr>
         <p>Desarrolalador Alvaro Duarte - 2025| <a href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
+        <a href="https://facebook.com/alvarod14"><img src="./imagenes/logo-facebook.PNG" alt="FACEBOOK" height="25"></a>
+        <a href="https://instagram.com/alvarod14"><img src="./imagenes/logo-instagram.PNG" alt="INSTAGRAM" height="25"></a>
+        <a href="https://wa.me/+5491124079156"><img src="./imagenes/logo-whatsapp.PNG" alt="WHATSAPP" height="25"></a>
         <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
+    </footer>
     
 </body>
 </html>
