aplicacion de css
mejora con aplicación de css
actualización de paginas
cambio de fondo

--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,8 @@
             <!-- barra de navegacion general-->
         <nav class="barra-principal">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><img src="./imagenes/logo-1.png" alt="Encabezado"></li>
+                <li><a href="index.html"><i class="fas fa-home" style="color:#90EE90; font-size:20px;"></i>Inicio</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
@@ -22,12 +23,10 @@
         </nav>
 
         <section>
-            <img src="./imagenes/logo-1.png" alt="Encabezado" height="140">
+            <h1><img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">Inicio</h1>
         </section>
 
-        <hr>
-        <h1><img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="40">Contacto</h1>
-        <h3>El futuro es ahora!</h3>
+        <h2>Bienvenido a SiriusD</h2>
     </header>
 
     <!--contenido de la pagina-->
