--- a/productos.html
+++ b/productos.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="./css/stilo.css">
     <title>Productos.</title>
 </head>
-
 <!--cuerpo de la pagina-->
 <body>
     <!--encabezado-->
@@ -14,7 +13,8 @@
             <!-- barra de navegacion general-->
         <nav class="barra-principal">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><img src="./imagenes/logo-1.png" alt="Encabezado"></li>
+                <li><a href="index.html"><i class="fas fa-home" style="color:#90EE90; font-size:20px;"></i>Inicio</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
@@ -22,11 +22,8 @@
         </nav>
 
         <section>
-            <img src="./imagenes/logo-1.png" alt="Encabezado" height="140">
+            <h1><img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">Inicio</h1>
         </section>
-
-        <h1><img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="40">Productos</h1>
-        <h3>El futuro es ahora!</h3>
     </header>
 
     <!--contenido de la pagina-->
@@ -38,49 +35,52 @@
         <nav class="barra-secundaria">
             <ul>
                 <li><a href="./productos/herramientas.html">Herramientas</a></li>
-                <li><a href="./productos/materiales.html">Maquinaria</a></li>
+                <li><a href="./productos/materiales.html">Materiales</a></li>
                 <li><a href="./productos/seguridad.html">Seguridad</a></li>
             </ul>
         </nav>
         
-        <section id="materiales">
-            <h2>Materiales Electricos</h2>
-            <p>Contamos con una amplia gama de materiales electricos para tu hogar y tu empresa.</p>
-            <ul>
-                <li>Conductores Electricos</li>
-                <li>Interruptores</li>
-                <li>Enchufes</li>
-                <li>Tableros Electricos</li>
-                <li>Transformadores</li>
-                <li>Fusibles</li>
-                <li>Conectores</li>
-            </ul>
-        </section>
+        <div>        
+            <section id="materiales">
+                <h2>Materiales Electricos</h2>
+                <p>Contamos con una amplia gama de materiales electricos para tu hogar y tu empresa.</p>
+                <ul>
+                    <li>Conductores Electricos</li>
+                    <li>Interruptores</li>
+                    <li>Tomacorrientes</li>
+                    <li>Tableros Electricos</li>
+                    <li>Transformadores</li>
+                    <li>Disyuntores</li>
+                    <li>Termicas</li>
+                </ul>
+            </section>
 
-        <section id="herramientas">
-            <h2>Herramientas Electricas</h2>
-            <p>Las mejores herramientas electricas para tus proyectos electricos.</p>
-            <ul>
-                <li>Taladros</li>
-                <li>Atornilladores</li>
-                <li>Sierras</li>   
-                <li>Multimetros</li>
-                <li>Pinzas</li>
-                <li>Cortadores</li>
-            </ul>
-        </section>
+            <section id="herramientas">
+                <h2>Herramientas Electricas</h2>
+                <p>Las mejores herramientas electricas para tus proyectos electricos.</p>
+                <ul>
+                    <li>Taladros</li>
+                    <li>Atornilladores</li>
+                    <li>Sierras</li>   
+                    <li>Multimetros</li>
+                    <li>Pinzas</li>
+                    <li>Cortadores</li>
+                </ul>
+            </section>
 
-        <section id="seguridad">
-            <h2>Equipos de Seguridad</h2>
-            <p>Equipos de seguridad para la proteccion de tu hogar y tu empresa.</p>
-            <ul>
-                <li>Guantes Aislantes</li>
-                <li>Botas de Seguridad</li>
-                <li>Casco de Seguridad</li>
-                <li>Gafas de Seguridad</li>
-                <li>Protectores Auditivos</li>
-            </ul>   
-        </section>
+            <section id="seguridad">
+                <h2>Equipos de Seguridad</h2>
+                <p>Equipos de seguridad para la proteccion de tu hogar y tu empresa.</p>
+                <ul>
+                    <li>Guantes Aislantes</li>
+                    <li>Botas de Seguridad</li>
+                    <li>Casco de Seguridad</li>
+                    <li>Gafas de Seguridad</li>
+                    <li>Arnes de Seguridad</li>
+                    <li>Ropa Ignifuga</li>
+                </ul>   
+            </section>
+        </div>
 
     </main>
 
