--- a/productos/herramientas.html
+++ b/productos/herramientas.html
@@ -14,7 +14,8 @@
             <!-- barra de navegacion general-->
         <nav class="barra-principal">
             <ul>
-                <li><a href="../index.html">Inicio</a></li>
+                <li><img src="../imagenes/logo-1.png" alt="Encabezado"></li>
+                <li><a href="../index.html"><i class="fas fa-home" style="color:#90EE90; font-size:20px;"></i>Inicio</a></li>
                 <li><a href="../nosotros.html">Nosotros</a></li>
                 <li><a href="../productos.html">Productos</a></li>
                 <li><a href="../contacto.html">Contacto</a></li>
@@ -22,11 +23,8 @@
         </nav>
 
         <section>
-            <img src="../imagenes/logo-1.png" alt="Encabezado" height="140">
+            <h1><img src="../imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">Inicio</h1>
         </section>
-
-        <h1><img src="../imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="40">Productos</h1>
-        <h3>El futuro es ahora!</h3>
     </header>
 
     <!--contenido de la pagina-->
@@ -38,7 +36,7 @@
         <nav class="barra-secundaria">
             <ul>
                 <li><a href="./herramientas.html">Herramientas</a></li>
-                <li><a href="./materiales.html">Maquinaria</a></li>
+                <li><a href="./materiales.html">Materiales</a></li>
                 <li><a href="./seguridad.html">Seguridad</a></li>
             </ul>
         </nav>
