--- a/productos/materiales.html
+++ b/productos/materiales.html
@@ -14,7 +14,8 @@
             <!-- barra de navegacion general-->
         <nav class="barra-principal">
             <ul>
-                <li><a href="../index.html">Inicio</a></li>
+                <li><img src="../imagenes/logo-1.png" alt="Encabezado"></li>
+                <li><a href="../index.html"><i class="fas fa-home" style="color:#90EE90; font-size:20px;"></i>Inicio</a></li>
                 <li><a href="../nosotros.html">Nosotros</a></li>
                 <li><a href="../productos.html">Productos</a></li>
                 <li><a href="../contacto.html">Contacto</a></li>
@@ -22,13 +23,10 @@
         </nav>
 
         <section>
-            <img src="../imagenes/logo-1.png" alt="Encabezado" height="140">
+            <h1><img src="../imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">Materiales</h1>
         </section>
-
-        <hr>
-        <h1><img src="../imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="40">Productos</h1>
-        <h3>El futuro es ahora!</h3>
     </header>
+
 
     <!--contenido de la pagina-->
     <main>
@@ -39,11 +37,23 @@
         <nav class="barra-secundaria">
             <ul>
                 <li><a href="./herramientas.html">Herramientas</a></li>
-                <li><a href="./materiales.html">Maquinaria</a></li>
+                <li><a href="./materiales.html">Materiales</a></li>
                 <li><a href="./seguridad.html">Seguridad</a></li>
             </ul>
         </nav>
-        
+
+        <div class="materiales">
+            <img src="./img-materiales/cable-tpr.png" alt="Cable TPR">
+            <img src="./img-materiales/cable-unipolar.png" alt="cable unipolar">
+            <img src="./img-materiales/cinta-aislante.png" alt="Cinta Aislante">
+            <img src="./img-materiales/contactor-electrico.png" alt="Contactor">
+            <img src="./img-materiales/disyuntor.png" alt="Disyuntor">
+            <img src="./img-materiales/plafon-led-redondo.png" alt="Plafon LED">
+            <img src="./img-materiales/tablero-electrico-embutir.png" alt="Tablero Electrico">
+            <img src="./img-materiales/termica-tetrapolar.png" alt="Termica">
+            <img src="./img-materiales/tomacorrientes.png" alt="Tomacorrientes">
+            <img src="./img-materiales/transformador-24v.png" alt="Transformador">
+        </div>
     </main>
 
     <!--pie de pagina-->
