--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="barra-principal">
             <ul>
                 <li><img src="./imagenes/logo-1.png" alt="Encabezado"></li>
-                <li><a href="index.html"><i class="fas fa-home" style="color:#90EE90; font-size:20px;"></i>Inicio</a></li>
+                <li><a href="index.html"></i>Inicio</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
