--- a/productos.html
+++ b/productos.html
@@ -10,19 +10,22 @@
 <body>
     <!--encabezado-->
     <header>
+        <section class="encabezado">
+            <img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
             <!-- barra de navegacion general-->
-        <nav class="barra-principal">
-            <ul>
-                <li><img src="./imagenes/logo-1.png" alt="Encabezado"></li>
-                <li><a href="index.html"><i class="fas fa-home" style="color:#90EE90; font-size:20px;"></i>Inicio</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+            <nav class="barra-principal">
+                <ul>
+                    <li><a href="index.html"></i>Inicio</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </section>
 
         <section>
-            <h1><img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">Inicio</h1>
+            <img src="./imagenes/logo-1.png" alt="Encabezado"height="250">
+            <h1>Inicio</h1>
         </section>
     </header>
 
