optimizacion y actualizacion de pagina
se dividen los elementos haciendo una  mejor distribucion
se optimiza barra principal y secundaria
actualizacion de logo

--- a/index.html
+++ b/index.html
@@ -12,31 +12,33 @@
 <!--cuerpo de la pagina-->
 <body>
     <!--encabezado-->
+    <div class="encabezado">
+        <img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
+        <!-- barra de navegacion general-->
+        <nav class="barra-principal">
+            <ul>
+                <li><a href="index.html"></i>Inicio</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <header>
-        <section class="encabezado">
-            <img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
-            <!-- barra de navegacion general-->
-            <nav class="barra-principal">
-                <ul>
-                    <li><a href="index.html"></i>Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </section>
-
-        <section>
-            <img src="./imagenes/logo-1.png" alt="Encabezado"height="250">
-            <h1>Inicio</h1>
-        </section>
-
+        <div class="titulo">
+            <img src="./imagenes/logo-sirius1.png " alt="Encabezado" height="205">
+            <section>
+                <h1>Bienvenido a SiriusD</h1>
+                <h3>El futuro es ahora</h3>
+            </section>
+        </div>
+        
     </header>
 
     <!--contenido de la pagina-->
     <main>
-        <h2>Bienvenido a SiriusD</h2>
-        <h3>El Futuro es Ahora</h3>
+        <h3>SiriusD</h3>
         <P>Primer sitio web de materiales electricos y herramientas electricas.</P>
         <p>estamos para hacer funcionar ts proyectos y facilitar tu vida</p>
         <p>Explora nuestros productos y descubre lo que tenemos para ofrecerte.</p>
@@ -56,11 +58,13 @@
 
     <!--pie de pagina-->
     <footer>
+        <div class="pie-pagina">
         <p>Desarrolalador Alvaro Duarte - 2025| <a href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
         <a href="https://facebook.com/alvarod14"><img src="./imagenes/logo-facebook.PNG" alt="FACEBOOK" height="25"></a>
         <a href="https://instagram.com/alvarod14"><img src="./imagenes/logo-instagram.PNG" alt="INSTAGRAM" height="25"></a>
         <a href="https://wa.me/+5491124079156"><img src="./imagenes/logo-whatsapp.PNG" alt="WHATSAPP" height="25"></a>
         <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
+        </div>
     </footer>
     
 </body>
