--- a/ubicacion.html
+++ b/ubicacion.html
@@ -9,25 +9,27 @@
 
 <!--cuerpo de la pagina-->
 <body>
-    <!--encabezado-->
-    <header>
-        <section class="encabezado">
-            <img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
-            <!-- barra de navegacion general-->
-            <nav class="barra-principal">
-                <ul>
-                    <li><a href="index.html"></i>Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </section>
+    <div class="encabezado">
+        <img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
+        <!-- barra de navegacion general-->
+        <nav class="barra-principal">
+            <ul>
+                <li><a href="index.html"></i>Inicio</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
 
-        <section>
-            <img src="./imagenes/logo-1.png" alt="Encabezado"height="250">
-            <h1>Inicio</h1>
-        </section>
+    <header>
+        <div class="titulo">
+            <img src="./imagenes/logo-sirius1.png " alt="Encabezado" height="205">
+            <section>
+                <h1>Visita SiriusD</h1>
+                <h3>Nuestra ubicacion</h3>
+            </section>
+        </div>
     </header>
 
     <!--contenido de la pagina-->
