--- a/contacto.html
+++ b/contacto.html
@@ -10,35 +10,36 @@
 <!--cuerpo de la pagina-->
 <body>
     <!--encabezado-->
+    <div class="encabezado">
+        <img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
+        <!-- barra de navegacion general-->
+        <nav class="barra-principal">
+            <ul>
+                <li><a href="index.html"></i>Inicio</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <header>
-        <section class="encabezado">
-            <img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
-            <!-- barra de navegacion general-->
-            <nav class="barra-principal">
-                <ul>
-                    <li><a href="index.html"></i>Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </section>
-
-        <section>
-            <img src="./imagenes/logo-1.png" alt="Encabezado"height="250">
-            <h1>Inicio</h1>
-        </section>
-    </header>
-
-        <h2>Bienvenido a SiriusD</h2>
-    </header>
+        <div class="titulo">
+            <img src="./imagenes/logo-sirius1.png " alt="Encabezado" height="205">
+            <section>
+                <h1>Contactanos</h1>
+                <h3>Estamos para ayudarte</h3>
+            </section>
+        </div>
+    </header>>
 
     <!--contenido de la pagina-->
     <main>
-        <h2>Contáctanos</h2>
+        <h2>Informacion de contacto</h2>
         <p>Si tienes alguna pregunta o necesitas más información, no dudes en ponerte en contacto con nosotros. Estamos aquí para ayudarte.</p>
 
         <section>
+            <h2>Formulario de Contacto</h2>
             <form action="https://formspree.io/f/mvgaakyq" method="POST"> 
                 <input type="texto" name="Nombres" id="nombre" placeholder="Ingrese su nombre">
                 <br>
