--- a/nosotros.html
+++ b/nosotros.html
@@ -9,30 +9,33 @@
 
 <!--cuerpo de la pagina-->
 <body>
-    <!--encabezado-->
-    <header>
-        <section class="encabezado">
-            <img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
-            <!-- barra de navegacion general-->
-            <nav class="barra-principal">
-                <ul>
-                    <li><a href="index.html"></i>Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </section>
+    <div class="encabezado">
+        <img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
+        <!-- barra de navegacion general-->
+        <nav class="barra-principal">
+            <ul>
+                <li><a href="index.html"></i>Inicio</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
 
-        <section>
-            <img src="./imagenes/logo-1.png" alt="Encabezado"height="250">
-            <h1>Inicio</h1>
-        </section>
+    <header>
+        <div class="titulo">
+            <img src="./imagenes/logo-sirius1.png " alt="Encabezado" height="205">
+            <section>
+                <h1>Conoce a SiriusD</h1>
+                <h3>Pasion por lo que hacemos</h3>
+            </section>
+        </div>
     </header>
 
     <!--contenido de la pagina-->
     <main>
         <section>
+            
             <h2>¿Quiénes somos?</h2>
             <p>En SiriusD, somos un equipo apasionado por la tecnología y la innovación. Nos dedicamos a ofrecer soluciones de alta calidad en el ámbito de la informática y la electrónica. Nuestro objetivo es ayudar a nuestros clientes a alcanzar sus metas mediante el uso de herramientas y tecnologías avanzadas.</p>
             <p>Desde nuestra fundación, hemos trabajado arduamente para construir una reputación sólida en el mercado. Nos enorgullece contar con un equipo de expertos altamente capacitados que están siempre dispuestos a brindar el mejor servicio y soporte a nuestros clientes.</p>
