--- a/productos.html
+++ b/productos.html
@@ -9,82 +9,86 @@
 <!--cuerpo de la pagina-->
 <body>
     <!--encabezado-->
-    <header>
-        <section class="encabezado">
-            <img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
-            <!-- barra de navegacion general-->
-            <nav class="barra-principal">
-                <ul>
-                    <li><a href="index.html"></i>Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </section>
+    <div class="encabezado">
+        <img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
+        <!-- barra de navegacion general-->
+        <nav class="barra-principal">
+            <ul>
+                <li><a href="index.html"></i>Inicio</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
 
-        <section>
-            <img src="./imagenes/logo-1.png" alt="Encabezado"height="250">
-            <h1>Inicio</h1>
-        </section>
-    </header>
+    <header>
+        <div class="titulo">
+            <img src="./imagenes/logo-sirius1.png " alt="Encabezado" height="205">
+            <section>
+                <h1>Catalogo SiriusD</h1>
+                <h3>Explora nuestros productos</h3>
+            </section>
+        </div>
+    </header>>
 
     <!--contenido de la pagina-->
     <main>
-        <h2>Bienvenido a SiriusD</h2>
+        <h2>Productos</h2>
         <p>Explora nuestros productos y descubre lo que tenemos para ofrecerte.</p>
-
-        <!--navegador secundario-->
-        <nav class="barra-secundaria">
-            <ul>
-                <li><a href="./productos/herramientas.html">Herramientas</a></li>
-                <li><a href="./productos/materiales.html">Materiales</a></li>
-                <li><a href="./productos/seguridad.html">Seguridad</a></li>
-            </ul>
-        </nav>
         
-        <div>        
-            <section id="materiales">
-                <h2>Materiales Electricos</h2>
-                <p>Contamos con una amplia gama de materiales electricos para tu hogar y tu empresa.</p>
+        <div class="contenedor-productos">
+            <!--navegador secundario-->
+            <nav class="barra-secundaria">
                 <ul>
-                    <li>Conductores Electricos</li>
-                    <li>Interruptores</li>
-                    <li>Tomacorrientes</li>
-                    <li>Tableros Electricos</li>
-                    <li>Transformadores</li>
-                    <li>Disyuntores</li>
-                    <li>Termicas</li>
+                    <li><a href="./productos/herramientas.html">Herramientas</a></li>
+                    <li><a href="./productos/materiales.html">Materiales</a></li>
+                    <li><a href="./productos/seguridad.html">Seguridad</a></li>
                 </ul>
-            </section>
+            </nav>
+            <!--productos categorias-->
+            <div class="materiales">        
+                <section>
+                    <h2>Materiales Electricos</h2>
+                    <p>Contamos con una amplia gama de materiales electricos para tu hogar y tu empresa.</p>
+                    <ul>
+                        <li>Conductores Electricos</li>
+                        <li>Interruptores</li>
+                        <li>Tomacorrientes</li>
+                        <li>Tableros Electricos</li>
+                        <li>Transformadores</li>
+                        <li>Disyuntores</li>
+                        <li>Termicas</li>
+                    </ul>
+                </section>
 
-            <section id="herramientas">
-                <h2>Herramientas Electricas</h2>
-                <p>Las mejores herramientas electricas para tus proyectos electricos.</p>
-                <ul>
-                    <li>Taladros</li>
-                    <li>Atornilladores</li>
-                    <li>Sierras</li>   
-                    <li>Multimetros</li>
-                    <li>Pinzas</li>
-                    <li>Cortadores</li>
-                </ul>
-            </section>
+                <section>
+                    <h2>Herramientas Electricas</h2>
+                    <p>Las mejores herramientas electricas para tus proyectos electricos.</p>
+                    <ul>
+                        <li>Taladros</li>
+                        <li>Atornilladores</li>
+                        <li>Sierras</li>   
+                        <li>Multimetros</li>
+                        <li>Pinzas</li>
+                        <li>Cortadores</li>
+                    </ul>
+                </section>
 
-            <section id="seguridad">
-                <h2>Equipos de Seguridad</h2>
-                <p>Equipos de seguridad para la proteccion de tu hogar y tu empresa.</p>
-                <ul>
-                    <li>Guantes Aislantes</li>
-                    <li>Botas de Seguridad</li>
-                    <li>Casco de Seguridad</li>
-                    <li>Gafas de Seguridad</li>
-                    <li>Arnes de Seguridad</li>
-                    <li>Ropa Ignifuga</li>
-                </ul>   
-            </section>
+                <section>
+                    <h2>Equipos de Seguridad</h2>
+                    <p>Equipos de seguridad para la proteccion de tu hogar y tu empresa.</p>
+                    <ul>
+                        <li>Guantes Aislantes</li>
+                        <li>Botas de Seguridad</li>
+                        <li>Casco de Seguridad</li>
+                        <li>Gafas de Seguridad</li>
+                        <li>Arnes de Seguridad</li>
+                        <li>Ropa Ignifuga</li>
+                    </ul>   
+                </section>
+            </div>
         </div>
-
     </main>
 
     <!--pie de pagina-->
