--- a/productos/materiales.html
+++ b/productos/materiales.html
@@ -10,52 +10,56 @@
 <!--cuerpo de la pagina-->
 <body>
     <!--encabezado-->
+    <div class="encabezado">
+        <img src="../imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
+        <!-- barra de navegacion general-->
+        <nav class="barra-principal">
+            <ul>
+                <li><a href="../index.html"></i>Inicio</a></li>
+                <li><a href="../nosotros.html">Nosotros</a></li>
+                <li><a href="../productos.html">Productos</a></li>
+                <li><a href="../contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <header>
-        <section class="encabezado">
-            <img src="../imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
-            <!-- barra de navegacion general-->
-            <nav class="barra-principal">
-                <ul>
-                    <li><a href="../index.html"></i>Inicio</a></li>
-                    <li><a href="../nosotros.html">Nosotros</a></li>
-                    <li><a href="../productos.html">Productos</a></li>
-                    <li><a href="../contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </section>
-
-        <section>
-            <img src="../imagenes/logo-1.png" alt="Encabezado"height="250">
-            <h1>Inicio</h1>
-        </section>
+        <div class="titulo">
+            <img src="../imagenes/logo-sirius1.png " alt="Encabezado" height="205">
+            <section>
+                <h1>Catalogo SiriusD</h1>
+                <h3>Explora nuestros productos</h3>
+            </section>
+        </div>
     </header>
-
 
     <!--contenido de la pagina-->
     <main>
         <h2>Bienvenido a SiriusD</h2>
         <p>Explora nuestros productos y descubre lo que tenemos para ofrecerte.</p>
 
-        <!--navegador secundario-->
-        <nav class="barra-secundaria">
-            <ul>
-                <li><a href="./herramientas.html">Herramientas</a></li>
-                <li><a href="./materiales.html">Materiales</a></li>
-                <li><a href="./seguridad.html">Seguridad</a></li>
-            </ul>
-        </nav>
-
-        <div class="materiales">
-            <img src="./img-materiales/cable-tpr.png" alt="Cable TPR">
-            <img src="./img-materiales/cable-unipolar.png" alt="cable unipolar">
-            <img src="./img-materiales/cinta-aislante.png" alt="Cinta Aislante">
-            <img src="./img-materiales/contactor-electrico.png" alt="Contactor">
-            <img src="./img-materiales/disyuntor.png" alt="Disyuntor">
-            <img src="./img-materiales/plafon-led-redondo.png" alt="Plafon LED">
-            <img src="./img-materiales/tablero-electrico-embutir.png" alt="Tablero Electrico">
-            <img src="./img-materiales/termica-tetrapolar.png" alt="Termica">
-            <img src="./img-materiales/tomacorrientes.png" alt="Tomacorrientes">
-            <img src="./img-materiales/transformador-24v.png" alt="Transformador">
+        <div class="contenedor-productos">
+            <!--navegador secundario-->
+            <nav class="barra-secundaria">
+                <ul>
+                    <li><a href="./herramientas.html">Herramientas</a></li>
+                    <li><a href="./materiales.html">Materiales</a></li>
+                    <li><a href="./seguridad.html">Seguridad</a></li>
+                </ul>
+            </nav>
+            <!--productos-->
+            <div class="materiales">
+                <img src="./img-materiales/cable-tpr.png" alt="Cable TPR">
+                <img src="./img-materiales/cable-unipolar.png" alt="cable unipolar">
+                <img src="./img-materiales/cinta-aislante.png" alt="Cinta Aislante">
+                <img src="./img-materiales/contactor-electrico.png" alt="Contactor">
+                <img src="./img-materiales/disyuntor.png" alt="Disyuntor">
+                <img src="./img-materiales/plafon-led-redondo.png" alt="Plafon LED">
+                <img src="./img-materiales/tablero-electrico-embutir.png" alt="Tablero Electrico">
+                <img src="./img-materiales/termica-tetrapolar.png" alt="Termica">
+                <img src="./img-materiales/tomacorrientes.png" alt="Tomacorrientes">
+                <img src="./img-materiales/transformador-24v.png" alt="Transformador">
+            </div>
         </div>
     </main>
 
