--- a/productos/seguridad.html
+++ b/productos/seguridad.html
@@ -10,40 +10,49 @@
 <!--cuerpo de la pagina-->
 <body>
     <!--encabezado-->
-    <header>
-        <section class="encabezado">
-            <img src="../imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
-            <!-- barra de navegacion general-->
-            <nav class="barra-principal">
-                <ul>
-                    <li><a href="../index.html"></i>Inicio</a></li>
-                    <li><a href="../nosotros.html">Nosotros</a></li>
-                    <li><a href="../productos.html">Productos</a></li>
-                    <li><a href="../contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </section>
+    <div class="encabezado">
+        <img src="../imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
+        <!-- barra de navegacion general-->
+        <nav class="barra-principal">
+            <ul>
+                <li><a href="../index.html"></i>Inicio</a></li>
+                <li><a href="../nosotros.html">Nosotros</a></li>
+                <li><a href="../productos.html">Productos</a></li>
+                <li><a href="../contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
 
-        <section>
-            <img src="../imagenes/logo-1.png" alt="Encabezado"height="250">
-            <h1>Inicio</h1>
-        </section>
+    <header>
+        <div class="titulo">
+            <img src="../imagenes/logo-sirius1.png " alt="Encabezado" height="205">
+            <section>
+                <h1>Catalogo SiriusD</h1>
+                <h3>Explora nuestros productos</h3>
+            </section>
+        </div>
     </header>
 
+    <!--contenido de la pagina-->
     <!--contenido de la pagina-->
     <main>
         <h2>Bienvenido a SiriusD</h2>
         <p>Explora nuestros productos y descubre lo que tenemos para ofrecerte.</p>
 
-        <!--navegador secundario-->
-        <nav class="barra-secundaria">
-            <ul>
-                <li><a href="./herramientas.html">Herramientas</a></li>
-                <li><a href="./materiales.html">Materiales</a></li>
-                <li><a href="./seguridad.html">Seguridad</a></li>
-            </ul>
-        </nav>
-        
+        <div class="contenedor-productos">
+            <!--navegador secundario-->
+            <nav class="barra-secundaria">
+                <ul>
+                    <li><a href="./herramientas.html">Herramientas</a></li>
+                    <li><a href="./materiales.html">Materiales</a></li>
+                    <li><a href="./seguridad.html">Seguridad</a></li>
+                </ul>
+            </nav>
+            <!--productos-->
+            <div class="materiales">
+                
+            </div>
+        </div>
     </main>
 
     <!--pie de pagina-->
