--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <header>
         <div class="titulo">
-            <img src="./imagenes/logo-sirius1.png " alt="Encabezado" height="205">
+            <img src="./imagenes/sirius.PNG " alt="Encabezado" height="205">
             <section>
                 <h1>Bienvenido a SiriusD</h1>
                 <h3>El futuro es ahora</h3>
