--- a/productos/seguridad.html
+++ b/productos/seguridad.html
@@ -25,7 +25,7 @@
 
     <header>
         <div class="titulo">
-            <img src="../imagenes/logo-sirius1.png " alt="Encabezado" height="205">
+            <img src="./imagenes/sirius.PNG " alt="Encabezado" height="205">
             <section>
                 <h1>Catalogo SiriusD</h1>
                 <h3>Explora nuestros productos</h3>
@@ -50,7 +50,7 @@
             </nav>
             <!--productos-->
             <div class="materiales">
-                
+
             </div>
         </div>
     </main>
