--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
 
     <header>
         <div class="titulo">
-            <img src="./imagenes/logo-sirius1.png " alt="Encabezado" height="205">
+            <img src="./imagenes/sirius.PNG " alt="Encabezado" height="205">
             <section>
                 <h1>Contactanos</h1>
                 <h3>Estamos para ayudarte</h3>
