--- a/productos.html
+++ b/productos.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/stilo.css">
     <title>Productos.</title>
 </head>
+
 <!--cuerpo de la pagina-->
 <body>
     <!--encabezado-->
@@ -24,7 +25,7 @@
 
     <header>
         <div class="titulo">
-            <img src="./imagenes/logo-sirius1.png " alt="Encabezado" height="205">
+            <img src="./imagenes/sirius.PNG " alt="Encabezado" height="205">
             <section>
                 <h1>Catalogo SiriusD</h1>
                 <h3>Explora nuestros productos</h3>
