--- a/ubicacion.html
+++ b/ubicacion.html
@@ -9,6 +9,7 @@
 
 <!--cuerpo de la pagina-->
 <body>
+    <!--encabezado-->
     <div class="encabezado">
         <img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
         <!-- barra de navegacion general-->
@@ -24,7 +25,7 @@
 
     <header>
         <div class="titulo">
-            <img src="./imagenes/logo-sirius1.png " alt="Encabezado" height="205">
+            <img src="./imagenes/sirius.PNG " alt="Encabezado" height="205">
             <section>
                 <h1>Visita SiriusD</h1>
                 <h3>Nuestra ubicacion</h3>
