optimizacion de distribucion de box
se aplican correctivos y mejoras

--- a/index.html
+++ b/index.html
@@ -36,22 +36,27 @@
 
     <!--contenido de la pagina-->
     <main>
-        <h3>SiriusD</h3>
-        <P>Primer sitio web de materiales electricos y herramientas electricas.</P>
-        <p>estamos para hacer funcionar ts proyectos y facilitar tu vida</p>
-        <p>Explora nuestros productos y descubre lo que tenemos para ofrecerte.</p>
-        <section>
-            <video controls width="300" height="200">
-                <source src="./videos/video-pag-inicio.mp4" type="video/mp4">
-                <track src="./videos/subtitulos.vtt" kind="subtitles" srclang="es" label="Español" default>
-                Tu navegador no soporta el elemento de video.
-            </video>
-        </section>
+        <div class="contenedor-productos">
+            <section class="inicio">
+                <h3>SiriusD</h3>
+                <P>Primer sitio web de materiales electricos y herramientas electricas.</P>
+                <p>estamos para hacer funcionar ts proyectos y facilitar tu vida</p>
+                <p>Explora nuestros productos y descubre lo que tenemos para ofrecerte.</p>
+                <section>
+                    <h2><a href="ubicacion.html">Ubicacion</a></h2>
+                    <p>Estamos ubicados tu corazon</p>
+                </section>
+            </section>
 
-        <section>
-            <h2><a href="ubicacion.html">Ubicacion</a></h2>
-            <p>Estamos ubicados tu corazon</p>
-        </section>
+            <section>
+                <video controls width="300" height="200">
+                    <source src="./videos/video-pag-inicio.mp4" type="video/mp4">
+                    <track src="./videos/subtitulos.vtt" kind="subtitles" srclang="es" label="Español" default>
+                    Tu navegador no soporta el elemento de video.
+                </video>
+            </section>
+        </div>
+
     </main>
 
     <!--pie de pagina-->
