--- a/contacto.html
+++ b/contacto.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="./css/stilo.css">
     <title>Contactanos</title>
 </head>
 
 <!--cuerpo de la pagina-->
+
 <body>
     <!--encabezado-->
     <div class="encabezado">
@@ -31,27 +34,29 @@
                 <h3>Estamos para ayudarte</h3>
             </section>
         </div>
-    </header>>
+    </header>
 
     <!--contenido de la pagina-->
     <main>
         <h2>Informacion de contacto</h2>
-        <p>Si tienes alguna pregunta o necesitas más información, no dudes en ponerte en contacto con nosotros. Estamos aquí para ayudarte.</p>
+        <p>Si tienes alguna pregunta o necesitas más información, no dudes en ponerte en contacto con nosotros. Estamos
+            aquí para ayudarte.</p>
 
         <section>
             <h2>Formulario de Contacto</h2>
-            <form action="https://formspree.io/f/mvgaakyq" method="POST"> 
+            <form action="https://formspree.io/f/mvgaakyq" method="POST">
                 <input type="texto" name="Nombres" id="nombre" placeholder="Ingrese su nombre">
                 <br>
                 <input type="email" name="Email" id="email" placeholder="Ingrese su email">
                 <br>
                 <input type="tel" name="Telefono" id="telefono" placeholder="Ingrese su telefono">
                 <br>
-                <textarea name="Consulta" id="consulta" cols="30" rows="10" placeholder="Ingrese su consulta"></textarea>
+                <textarea name="Consulta" id="consulta" cols="30" rows="10"
+                    placeholder="Ingrese su consulta"></textarea>
                 <br>
                 <br>
-                <input type="submit" name="Submit" id="submit" placeholder="Enviar" >
-                <input type="reset" name="Reset" id="reset" placeholder="Resetear" >
+                <input type="submit" name="Submit" id="submit" placeholder="Enviar">
+                <input type="reset" name="Reset" id="reset" placeholder="Resetear">
             </form>
         </section>
 
@@ -64,12 +69,16 @@
 
     <!--pie de pagina-->
     <footer>
-        <p>Desarrolalador Alvaro Duarte - 2025| <a href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
-        <a href="https://facebook.com/alvarod14"><img src="./imagenes/logo-facebook.PNG" alt="FACEBOOK" height="25"></a>
-        <a href="https://instagram.com/alvarod14"><img src="./imagenes/logo-instagram.PNG" alt="INSTAGRAM" height="25"></a>
-        <a href="https://wa.me/+5491124079156"><img src="./imagenes/logo-whatsapp.PNG" alt="WHATSAPP" height="25"></a>
-        <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
+        <div class="pie-pagina">
+            <p>Desarrolalador Alvaro Duarte - 2025| <a
+                    href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
+            <a href="https://facebook.com/alvarod14"><i class="fa-brands fa-facebook-f" style="color: #072312;"></i></a>
+            <a href="https://instagram.com/alvarod14"><i class="fa-brands fa-instagram" style="color: #072312;"></i></a>
+            <a href="https://wa.me/+5491124079156"><i class="fa-brands fa-whatsapp" style="color: #072312;"></i></a>
+            <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
+        </div>
     </footer>
-    
+
 </body>
+
 </html>
