--- a/ubicacion.html
+++ b/ubicacion.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="./css/stilo.css">
     <title>Ubicacion</title>
 </head>
 
 <!--cuerpo de la pagina-->
+
 <body>
     <!--encabezado-->
     <div class="encabezado">
@@ -35,12 +38,14 @@
 
     <!--contenido de la pagina-->
     <main>
-
         <p>Estamos ubicados en Cua. Estado Miranda</p>
         <p>Para llegar a nuestras instalaciones, puedes seguir las siguientes indicaciones:</p>
         <p>No dudes en visitarnos</p>
         <section>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9339.835133468629!2d-66.90343091681329!3d10.187400527417696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1746456540361!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9339.835133468629!2d-66.90343091681329!3d10.187400527417696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1746456540361!5m2!1ses!2sar"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
         <section>
@@ -50,12 +55,16 @@
 
     <!--pie de pagina-->
     <footer>
-        <p>Desarrolalador Alvaro Duarte - 2025| <a href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
-        <a href="https://facebook.com/alvarod14"><img src="./imagenes/logo-facebook.PNG" alt="FACEBOOK" height="25"></a>
-        <a href="https://instagram.com/alvarod14"><img src="./imagenes/logo-instagram.PNG" alt="INSTAGRAM" height="25"></a>
-        <a href="https://wa.me/+5491124079156"><img src="./imagenes/logo-whatsapp.PNG" alt="WHATSAPP" height="25"></a>
-        <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
+        <div class="pie-pagina">
+            <p>Desarrolalador Alvaro Duarte - 2025| <a
+                    href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
+            <a href="https://facebook.com/alvarod14"><i class="fa-brands fa-facebook-f" style="color: #072312;"></i></a>
+            <a href="https://instagram.com/alvarod14"><i class="fa-brands fa-instagram" style="color: #072312;"></i></a>
+            <a href="https://wa.me/+5491124079156"><i class="fa-brands fa-whatsapp" style="color: #072312;"></i></a>
+            <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
+        </div>
     </footer>
-    
+
 </body>
+
 </html>
