--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <link rel="stylesheet" href="./css/stilo.css">
     <title>bienvenido a siriusd.</title>
 </head>
 
 <!--cuerpo de la pagina-->
+
 <body>
     <!--encabezado-->
-    <div class="encabezado">
-        <img src="./imagenes/logo-4.PNG" alt="LOGO PRINCIPAL" height="60">
-        <!-- barra de navegacion general-->
-        <nav class="barra-principal">
-            <ul>
-                <li><a href="index.html"></i>Inicio</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </div>
-
     <header>
+
+        <div class="encabezado">
+            <nav class="barra-principal">
+                <ul>
+                    <li><a href="index.html"></i>Inicio</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+
         <div class="titulo">
             <img src="./imagenes/sirius.PNG " alt="Encabezado" height="205">
             <section>
@@ -31,7 +34,7 @@
                 <h3>El futuro es ahora</h3>
             </section>
         </div>
-        
+
     </header>
 
     <!--contenido de la pagina-->
@@ -62,14 +65,15 @@
     <!--pie de pagina-->
     <footer>
         <div class="pie-pagina">
-        <p>Desarrolalador Alvaro Duarte - 2025| <a href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
-        <a href="https://facebook.com/alvarod14"><img src="./imagenes/logo-facebook.PNG" alt="FACEBOOK" height="25"></a>
-        <a href="https://instagram.com/alvarod14"><img src="./imagenes/logo-instagram.PNG" alt="INSTAGRAM" height="25"></a>
-        <a href="https://wa.me/+5491124079156"><img src="./imagenes/logo-whatsapp.PNG" alt="WHATSAPP" height="25"></a>
-        <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
+            <p>Desarrolalador Alvaro Duarte - 2025| <a
+                    href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
+            <a href="https://facebook.com/alvarod14"><i class="fa-brands fa-facebook-f" style="color: #072312;"></i></a>
+            <a href="https://instagram.com/alvarod14"><i class="fa-brands fa-instagram" style="color: #072312;"></i></a>
+            <a href="https://wa.me/+5491124079156"><i class="fa-brands fa-whatsapp" style="color: #072312;"></i></a>
+            <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
         </div>
     </footer>
-    
+
 </body>
 
 </html>
