--- a/productos.html
+++ b/productos.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="./css/stilo.css">
     <title>Productos.</title>
 </head>
 
 <!--cuerpo de la pagina-->
+
 <body>
     <!--encabezado-->
     <div class="encabezado">
@@ -31,13 +34,13 @@
                 <h3>Explora nuestros productos</h3>
             </section>
         </div>
-    </header>>
+    </header>
 
     <!--contenido de la pagina-->
     <main>
         <h2>Productos</h2>
         <p>Explora nuestros productos y descubre lo que tenemos para ofrecerte.</p>
-        
+
         <div class="contenedor-productos">
             <!--navegador secundario-->
             <nav class="barra-secundaria">
@@ -48,7 +51,7 @@
                 </ul>
             </nav>
             <!--productos categorias-->
-            <div class="materiales">        
+            <div class="materiales">
                 <section>
                     <h2>Materiales Electricos</h2>
                     <p>Contamos con una amplia gama de materiales electricos para tu hogar y tu empresa.</p>
@@ -69,7 +72,7 @@
                     <ul>
                         <li>Taladros</li>
                         <li>Atornilladores</li>
-                        <li>Sierras</li>   
+                        <li>Sierras</li>
                         <li>Multimetros</li>
                         <li>Pinzas</li>
                         <li>Cortadores</li>
@@ -86,7 +89,7 @@
                         <li>Gafas de Seguridad</li>
                         <li>Arnes de Seguridad</li>
                         <li>Ropa Ignifuga</li>
-                    </ul>   
+                    </ul>
                 </section>
             </div>
         </div>
@@ -94,12 +97,16 @@
 
     <!--pie de pagina-->
     <footer>
-        <p>Desarrolalador Alvaro Duarte - 2025| <a href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
-        <a href="https://facebook.com/alvarod14"><img src="./imagenes/logo-facebook.PNG" alt="FACEBOOK" height="25"></a>
-        <a href="https://instagram.com/alvarod14"><img src="./imagenes/logo-instagram.PNG" alt="INSTAGRAM" height="25"></a>
-        <a href="https://wa.me/+5491124079156"><img src="./imagenes/logo-whatsapp.PNG" alt="WHATSAPP" height="25"></a>
-        <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
+        <div class="pie-pagina">
+            <p>Desarrolalador Alvaro Duarte - 2025| <a
+                    href="mailto:alvaroduarte14@gmail.com">alvaroduarte14@gmail.com</a></p>
+            <a href="https://facebook.com/alvarod14"><i class="fa-brands fa-facebook-f" style="color: #072312;"></i></a>
+            <a href="https://instagram.com/alvarod14"><i class="fa-brands fa-instagram" style="color: #072312;"></i></a>
+            <a href="https://wa.me/+5491124079156"><i class="fa-brands fa-whatsapp" style="color: #072312;"></i></a>
+            <p>&copy; 2023 SiriusD. Todos los derechos reservados.</p>
+        </div>
     </footer>
-    
+
 </body>
+
 </html>
